# python-rustfluent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  makefile  noxfile.py  noxfile.python-only.py  noxfile.with-packages.py  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yaml
requirements/: development.txt
src/: lib.rs  rustfluent.pyi
src/rustfluent/: __init__.py
tests/: test_package.py  test_python_interface.py
tests/data/: attributes.ftl  broken_refs.ftl  broken_terms.ftl  cycle.ftl  duplicates.ftl  en.ftl  errors.ftl  mixed_errors.ftl  term_positional_args.ftl  terms.ftl  terms_definitions.ftl  terms_messages.ftl  variables.ftl
tests/rustfluent/: test_python_interface.py
tests/rustfluent/data/: fr.ftl
