[package]
name = "rustfluent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustfluent"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["chrono"] }
fluent = "0.16.1"
unic-langid = "0.9.5"
fluent-bundle = "0.15.3"
chrono = "0.4.38"
