[package]
name = "rustfluent"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustfluent"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["chrono"] }
fluent = "0.17.0"
unic-langid = "0.9.6"
fluent-bundle = "0.16.0"
chrono = "0.4.41"
miette = { version = "7.6.0", features = ["fancy"] }
